This file documents the revision history for mod_gearman.

1.0.1  Thu Feb 24 10:03:11 CET 2011
          - made gearmand init script work with old libevent versions
          - fixed make dist
          - fixed "make rpm" for SLES11

1.0    Mon Feb  7 11:05:29 CET 2011
          - added dup_server option (Mark Clarkson)
          - added stderr to send_multi
          - added missing performance data to send_multi
          - added error message when using unknown option
          - fixed handling of unusual exit codes

0.9    Sun Jan 16 21:20:06 CET 2011
          - prepared debian packaging (Stig Sandbeck Mathisen)
          - increased max output to 64k
          - fixed default paths in gearmand init script
          - fixed problem with too low number of workers after running for a while
          - fixed problem with uppercase service descriptions in send_gearman

0.8    Wed Nov 17 14:11:54 CET 2010
          - added send_multi (Matthias Flacke)
          - fixed checks with popen/exec

0.7    Wed Nov  3 14:01:23 CET 2010
          - added identifier to worker config. Usefull when running more than one worker per host
          - added spec file for building rpms
          - removed duplicate errors about connection problems
          - fixed logging when loaded after the livestatus module

0.6    Wed Oct 13 09:25:14 CEST 2010
          - added flexible column size for gearman_top
          - fixed starting status worker on reload
          - fixed graceful shutdown of gearmand
          - fixed bug in latency calculation
          - fixed bug in returing results

0.5    Fri Oct  1 08:18:06 CEST 2010
          - added check for minimum event broker options
          - added worker thresholds to check_gearman
          - added check in configure if users exists
          - changed performance data for check_gearman
          - initscript no uses su -s instead of su
          - added chown of logfile dir to make install

0.4    Sat Sep 25 23:15:26 CEST 2010