@@ -111,6 +111,11 @@ result_workers=1
 # Default no
 perfdata=no
 
+# perfdata mode overwrite helps preventing the perdata queue getting to big
+# 1 = overwrote
+# 2 = append
+perfdata_mode=1
+
 
 ###############################################################################
 #
